@@ -82,7 +82,7 @@
       <SubComponents>
         <Component class="javax.swing.JEditorPane" name="jEdtTest">
           <Properties>
-            <Property name="contentType" type="java.lang.String" value="text/java"/>
+            <Property name="contentType" type="java.lang.String" value=""/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Monospaced" size="13" style="0"/>
             </Property>
